2008-08-20  Gabor Csardi  <csardi@szaffi>

	* interface/R/igraph/R/conversion.R (get.adjacency.sparse) : 
	fixed a bug, when graph.adjacency.sparse is called with 
	a named graph

2008-07-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected a bug 
	when using multiple vertex shapes

2008-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness)
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : 
	add support for weights

2008-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness) : added 
	progress bar support
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : added
	progress bar support

2008-06-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	'sparse' option added

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	several bugs corrected
	
2008-06-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (get.adjacency) : 'sparse' 
	argument added

2008-06-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (igraph.from.graphNEL)
	(igraph.to.graphNEL) : add support for attributes

2008-06-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) :
	bug corrected

2008-06-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/rinterface.c.in (R_igraph_shortest_path) :
	call Bellman-Ford method if there is a negative weight

2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.data.frame) : added 'vertices' argument

2008-05-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/centrality.R (arpack) : 
	convert result of the non-symmetric solver to a better format

2008-05-03  Gabor Csardi  <csardi@rmki.kfki.hu>
